Connect with azure
Connect with azure

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=assigntaskdb;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Server=tcp:trioaidb.database.windows.net,1433;Initial Catalog=assigntaskdb;Persist Security Info=False;User ID=teamdevplu;Password=yamaha@601;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 
 
